--- a/Client/package.json
+++ b/Client/package.json
@@ -7,6 +7,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "native-base": "^2.13.1",
     "react": "16.6.1",
     "react-native": "0.57.5",
