--- a/Client/package.json
+++ b/Client/package.json
@@ -11,6 +11,7 @@
     "native-base": "^2.13.1",
     "react": "16.6.1",
     "react-native": "0.57.5",
+    "react-native-dropdownalert": "^4.1.0",
     "react-native-gesture-handler": "^1.3.0",
     "react-navigation": "^3.11.1"
   },
